added decision reason mgmt
